recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: not found: value lenght
		recule(lenght)
                       ^Tree:9: error: not found: value lenght
		recule(lenght);
                       ^